--- a/package.json
+++ b/package.json
@@ -16,9 +16,9 @@
     "@react-navigation/native": "^7.0.14",
     "@supabase/supabase-js": "^2.50.3",
     "@types/uuid": "^10.0.0",
-    "expo": "^53.0.0",
+    "expo": "~53.0.24",
     "expo-blur": "~14.1.3",
-    "expo-camera": "~16.1.5",
+    "expo-camera": "~16.1.11",
     "expo-constants": "~17.1.3",
     "expo-crypto": "^14.1.5",
     "expo-font": "~13.3.2",
@@ -26,19 +26,20 @@
     "expo-linear-gradient": "~14.1.3",
     "expo-linking": "~7.1.3",
     "expo-notifications": "^0.31.4",
-    "expo-router": "~5.1.3",
+    "expo-router": "~5.1.8",
     "expo-splash-screen": "~0.30.6",
     "expo-status-bar": "~2.2.2",
     "expo-symbols": "~0.4.3",
-    "expo-system-ui": "~5.0.5",
+    "expo-system-ui": "~5.0.11",
     "expo-web-browser": "~14.2.0",
     "lucide-react-native": "^0.475.0",
     "react": "19.0.0",
     "react-dom": "19.0.0",
-    "react-native": "0.79.5",
+    "react-native": "0.79.6",
     "react-native-gesture-handler": "~2.24.0",
+    "react-native-get-random-values": "^1.11.0",
     "react-native-reanimated": "~3.17.4",
-    "react-native-safe-area-context": "^4.6.3",
+    "react-native-safe-area-context": "5.4.0",
     "react-native-screens": "~4.11.1",
     "react-native-svg": "15.11.2",
     "react-native-url-polyfill": "^2.0.0",
